# gs2-parser

./: CMakeLists.txt  fix_unistd.py  gs2compiler-1.1.1-py3-none-manylinux_2_17_x86_64.manylinux2014_x86_64.whl  pyproject.toml
.github/workflows/: wheels.yml
bindings/python/: module.cpp
bindings/python/gs2compiler/: __init__.py
generator/: gs2parser.y  gs2scanner.l
src/: c_interface.cpp
