[build-system]
requires = ["scikit-build-core>=0.10", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "gs2compiler"
version = "1.1.2"
description = "GS2 Script Compiler - Compiles Graal Script 2 to bytecode"
readme = "README.md"
requires-python = ">=3.8"
license = {text = "MIT"}
authors = [
    {name = "xtjoeytx"},
]
keywords = ["graal", "gs2", "compiler", "bytecode", "graalonline"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: C++",
]

[project.urls]
Homepage = "https://github.com/xtjoeytx/gs2-parser"
Repository = "https://github.com/xtjoeytx/gs2-parser"
Issues = "https://github.com/xtjoeytx/gs2-parser/issues"

[tool.scikit-build]
cmake.minimum-version = "3.15"
cmake.args = ["-DBUILD_PYTHON=ON"]
cmake.targets = ["gs2compiler_py"]
wheel.install-dir = "gs2compiler"
wheel.packages = ["bindings/python/gs2compiler"]
